<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext2"
                    />

                    <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                    <TextView
                        android:id="@+id/txtIDSeason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext3"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                <TextView
                    android:id="@+id/txtIDPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext4"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                <TextView
                    android:id="@+id/txtSeasonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext5"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                <TextView
                    android:id="@+id/txtStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext6"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                <TextView
                    android:id="@+id/txtEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext7"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seasontext1"
                    />

                <TextView
                    android:id="@+id/txtDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>



        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>